// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addon.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-addon t-addon--prepend"
    >
      <span
        class="t-addon__prepend"
      >
        http://
      </span>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="请输入域名"
          value=""
        />
      </div>
    </div>
    <div
      class="t-addon t-addon--prepend t-addon--append"
    >
      <span
        class="t-addon__prepend"
      >
        http://
      </span>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="请输入域名"
          value=""
        />
      </div>
      <span
        class="t-addon__append"
      >
        .com
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容（无默认值）"
        value=""
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容（有默认值）"
        value="Welcome to TDesign"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`clearable.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value="Hello TDesign"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-is-disabled"
    >
      <input
        class="t-input__inner"
        disabled=""
        value="禁用状态"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input-group"
    >
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="姓"
          value=""
        />
      </div>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="名"
          value=""
        />
      </div>
    </div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="姓"
          value=""
        />
      </div>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="名"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`password.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="password"
        value=""
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="password"
        value=""
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-size-l"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-is-success"
    >
      <input
        class="t-input__inner"
        placeholder="成功状态"
        value=""
      />
    </div>
    <div
      class="t-input t-is-warning"
    >
      <input
        class="t-input__inner"
        placeholder="警告状态"
        value=""
      />
    </div>
    <div
      class="t-input t-is-error"
    >
      <input
        class="t-input__inner"
        placeholder="错误状态"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`textarea.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix"
      >
        <svg
          class="t-icon t-icon-search"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
